chore: update package.json to use ES modules and add new dependencies for development

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,5 @@
-PORT=your_port_number
+PORT=5000
+MONGODB_URI=your_mongodb_connection_string
+JWT_SECRET=your_secure_jwt_secret_key
+JWT_EXPIRES_IN=7d
+CLIENT_URL=http://localhost:3000
