--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
+# Copy to .env and fill values
+MONGODB_URI=mongodb://localhost:27017/careercraft
 PORT=5000
-MONGODB_URI=your_mongodb_connection_string
-JWT_SECRET=your_secure_jwt_secret_key
-JWT_EXPIRES_IN=7d
-CLIENT_URL=http://localhost:3000
+
+# Cloudinary credentials
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
