--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "react": "19.2.3",
