feat(auth) : Google + Github auth implemented

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,16 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 JWT_SECRET=
+
+# Frontend URL (for OAuth redirects)
+CLIENT_URL=http://localhost:3000
+# Public server URL (optional, used to build OAuth callback URLs)
+SERVER_URL=http://localhost:5000
+
+# Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
